[gd_scene load_steps=17 format=3 uid="uid://c5ynwievrvbqp"]

[ext_resource type="Script" uid="uid://hmyf2ah26xqb" path="res://scenes/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://cvv0bm6wqjo73" path="res://assets/Master Sprite Sheet.png" id="2_g2els"]
[ext_resource type="Texture2D" uid="uid://pgmgylol67xi" path="res://assets/MenuPullup.png" id="3_qhqgy"]
[ext_resource type="AudioStream" uid="uid://b8uehe60b7a5u" path="res://assets/old-clock-chimes-74624.mp3" id="4_dqkch"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fdfoy"]
atlas = ExtResource("2_g2els")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5jhy"]
atlas = ExtResource("2_g2els")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhpqf"]
atlas = ExtResource("2_g2els")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx1m4"]
atlas = ExtResource("2_g2els")
region = Rect2(64, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gjji"]
atlas = ExtResource("2_g2els")
region = Rect2(80, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gdjj"]
atlas = ExtResource("2_g2els")
region = Rect2(128, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc3ue"]
atlas = ExtResource("2_g2els")
region = Rect2(144, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2ulf"]
atlas = ExtResource("2_g2els")
region = Rect2(96, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e8lb"]
atlas = ExtResource("2_g2els")
region = Rect2(112, 64, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_510di"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdfoy")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5jhy")
}],
"loop": true,
"name": &"idle_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhpqf")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx1m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gjji")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gdjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc3ue")
}],
"loop": true,
"name": &"walk_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2ulf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e8lb")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ust6l"]
size = Vector2(14, 15)

[sub_resource type="CircleShape2D" id="CircleShape2D_y8stc"]
radius = 14.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_onrkg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(189, 170)
sprite_frames = SubResource("SpriteFrames_510di")
animation = &"idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(189, 170.5)
shape = SubResource("RectangleShape2D_ust6l")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(187, 169)
scale = Vector2(0.907276, 0.898101)
zoom = Vector2(5.5, 5.5)

[node name="ActionableFinder" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionableFinder"]
position = Vector2(189, 180)
shape = SubResource("CircleShape2D_y8stc")

[node name="SecretMenu" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(183, 204)
scale = Vector2(0.15, 0.078)
texture = ExtResource("3_qhqgy")

[node name="Secrets" type="Label" parent="SecretMenu"]
anchors_preset = -1
anchor_left = 0.41217
anchor_top = 0.0478315
anchor_right = 0.552249
anchor_bottom = 0.109664
offset_left = -991.02
offset_top = -953.319
offset_right = -991.02
offset_bottom = -953.319
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.946, 1.732)
theme_override_font_sizes/font_size = 80
text = "Secrets"
metadata/_edit_use_anchors_ = true

[node name="FranklinSecret" type="Label" parent="SecretMenu"]
offset_left = -976.635
offset_top = -659.956
offset_right = 740.365
offset_bottom = -592.956
scale = Vector2(0.946, 1.732)
theme_override_font_sizes/font_size = 48
text = "Franklin: Eugene married four times and has cheated on each of his wives."
metadata/_edit_use_anchors_ = true

[node name="RachelSecret" type="Label" parent="SecretMenu"]
offset_left = -976.635
offset_top = -540.933
offset_right = 803.365
offset_bottom = -473.933
scale = Vector2(0.946, 1.732)
theme_override_font_sizes/font_size = 48
text = "Rachel: Ben hacked into his school and looked at everyone's search histories."
metadata/_edit_use_anchors_ = true

[node name="JulieSecret" type="Label" parent="SecretMenu"]
offset_left = -976.635
offset_top = -421.91
offset_right = 281.365
offset_bottom = -354.91
scale = Vector2(0.946, 1.732)
theme_override_font_sizes/font_size = 48
text = "Julie: No one would notice if Ron disappeared one day."
metadata/_edit_use_anchors_ = true

[node name="BenSecret" type="Label" parent="SecretMenu"]
offset_left = -976.635
offset_top = -302.887
offset_right = 608.365
offset_bottom = -235.887
scale = Vector2(0.946, 1.732)
theme_override_font_sizes/font_size = 48
text = "Ben: Julie has been researching how to \"socially ruin\" someone's life."
metadata/_edit_use_anchors_ = true

[node name="BooSecret" type="Label" parent="SecretMenu"]
offset_left = -976.635
offset_top = -183.864
offset_right = -104.635
offset_bottom = -116.864
scale = Vector2(0.946, 1.732)
theme_override_font_sizes/font_size = 48
text = "Boo: Spike is stealing songs from Boo."
metadata/_edit_use_anchors_ = true

[node name="ClaraSecret" type="Label" parent="SecretMenu"]
offset_left = -976.635
offset_top = -64.8412
offset_right = -171.635
offset_bottom = 2.15884
scale = Vector2(0.946, 1.732)
theme_override_font_sizes/font_size = 48
text = "Clara: Boo steals from her parents."
metadata/_edit_use_anchors_ = true

[node name="GregSecret" type="Label" parent="SecretMenu"]
offset_left = -976.635
offset_top = 54.1818
offset_right = 531.365
offset_bottom = 121.182
scale = Vector2(0.946, 1.732)
theme_override_font_sizes/font_size = 48
text = "Greg: Shawn is planning on leaving town without telling anybody."
metadata/_edit_use_anchors_ = true

[node name="EugeneSecret" type="Label" parent="SecretMenu"]
offset_left = -976.635
offset_top = 190.208
offset_right = -48.6349
offset_bottom = 257.208
scale = Vector2(0.946, 1.732)
theme_override_font_sizes/font_size = 48
text = "Eugene: Charles lied about going to war."
metadata/_edit_use_anchors_ = true

[node name="CharlesSecret" type="Label" parent="SecretMenu"]
offset_left = -976.635
offset_top = 309.231
offset_right = 872.365
offset_bottom = 376.231
scale = Vector2(0.946, 1.732)
theme_override_font_sizes/font_size = 48
text = "Charles: Bjorn thinks his ship made it to Greenland, but it actually crashed here."
metadata/_edit_use_anchors_ = true

[node name="BjornSecret" type="Label" parent="SecretMenu"]
offset_left = -976.635
offset_top = 428.254
offset_right = 242.365
offset_bottom = 495.254
scale = Vector2(0.94573, 1.73209)
theme_override_font_sizes/font_size = 48
text = "Bjorn: Elphie thinks she actually has magical powers."
metadata/_edit_use_anchors_ = true

[node name="SeanSecret" type="Label" parent="SecretMenu"]
offset_left = -976.576
offset_top = 542.854
offset_right = 2331.42
offset_bottom = 679.854
scale = Vector2(0.946, 1.732)
theme_override_font_sizes/font_size = 48
text = "Sean: Rachel drives illegally."
metadata/_edit_use_anchors_ = true

[node name="SpikeSecret" type="Label" parent="SecretMenu"]
offset_left = -976.576
offset_top = 660.472
offset_right = 184.424
offset_bottom = 727.472
scale = Vector2(0.946, 1.732)
theme_override_font_sizes/font_size = 48
text = "Spike: Greg's manhood leaves much to be desired."
metadata/_edit_use_anchors_ = true

[node name="TimeLabel" type="Label" parent="."]
offset_left = 301.0
offset_top = 60.0
offset_right = 372.0
offset_bottom = 83.0
scale = Vector2(0.7, 0.7)
text = "12:00 AM"

[node name="Timer" type="Timer" parent="TimeLabel"]
wait_time = 18.0
autostart = true

[node name="ClockSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_dqkch")
volume_db = 3.0

[connection signal="timeout" from="TimeLabel/Timer" to="." method="_on_timer_timeout"]
